@@ -1,3 +1,7 @@
+2007-01-21  Kouhei Sutou  <kou@cozmixng.org>
+
+	* packages/cairo/ext/rb_cairo_context.c: supported cairo 1.3.12.
+
 2007-01-08  Kouhei Sutou  <kou@cozmixng.org>
 
 	* samples/text2.rb (render_layout): used
